--- a/Notes/Week4/week4.tex
+++ b/Notes/Week4/week4.tex
@@ -798,6 +798,14 @@
     \begin{itemize}
         \item Using the rigid-rotator harmonic oscillator approximation (which we may recall is the basis of all partition functions we've derived thus far) gives results in good (but not great) agreement with experiment.
     \end{itemize}
+    \item \marginnote{5/1:}We can achieve better agreement with experimental data using more laborious calculations.
+    \item Alternatively, we can turn to tabulated data, such as the \textbf{JANAF tables}.
+    \item \textbf{JANAF tables}: The \underline{j}oint, \underline{a}rmy, \underline{n}avy, \underline{a}ir \underline{f}orce tables \parencite{bib:JANAFtables}, which are one of the most extensive tabulations of the thermochemical properties of substances.
+    \begin{itemize}
+        \item The JANAF tables use as a reference point for relative data the standard molar enthalpies at \SI{298.15}{\kelvin}.
+    \end{itemize}
+    \item \textcite{bib:McQuarrieSimon} works through several examples of how to use the JANAF tables and manipulate the thermodynamic equations we've derived thus far to best suit them.
+    \item \textcite{bib:McQuarrieSimon} discusses equilibrium constants for real gases and solutions.
 \end{itemize}
 
 
