--- a/main.bib
+++ b/main.bib
@@ -1,31 +1,41 @@
 @online{bib:PHYS13300Notes,
-    title     = {{PHYS 13300 (Waves, Optics, and Heat)} Notes},
-    author    = {Steven Labalme},
-    year      = {2021},
-    url       = {https://github.com/shadypuck/PHYS13300Notes/blob/master/Notes/notes.pdf},
-    urldate   = {2022-01-11}
+    title        = {{PHYS 13300 (Waves, Optics, and Heat)} Notes},
+    author       = {Steven Labalme},
+    year         = {2021},
+    url          = {https://github.com/shadypuck/PHYS13300Notes/blob/master/Notes/notes.pdf},
+    urldate      = {2022-01-11}
 }
 
 @book{bib:McQuarrieSimon,
-    title     = {Physical Chemistry: A Molecular Approach},
-    author    = {Donald Allen McQuarrie and John Douglas Simon},
-    publisher = {University Science Books},
-    year      = {1997},
-    address   = {55D Gate Five Road, Sausalito, CA 94965}
+    title        = {Physical Chemistry: A Molecular Approach},
+    author       = {Donald Allen McQuarrie and John Douglas Simon},
+    publisher    = {University Science Books},
+    year         = {1997},
+    address      = {55D Gate Five Road, Sausalito, CA 94965}
 }
 
 @online{bib:APChemNotes,
-    title     = {{AP Chemistry} Notes},
-    author    = {Steven Labalme},
-    year      = {2021},
-    url       = {https://github.com/shadypuck/APChemNotes/blob/master/main.pdf},
-    urldate   = {2022-01-11}
+    title        = {{AP Chemistry} Notes},
+    author       = {Steven Labalme},
+    year         = {2021},
+    url          = {https://github.com/shadypuck/APChemNotes/blob/master/main.pdf},
+    urldate      = {2022-01-11}
 }
 
 @book{bib:CRCTables,
-    title     = {{CRC} Standard Mathematical Tables and Formulae},
-    editor    = {Daniel Zwillinger},
-    year      = {2003},
-    publisher = {Chapman \& Hall/CRC},
-    edition   = {31st}
+    title        = {{CRC} Standard Mathematical Tables and Formulae},
+    editor       = {Daniel Zwillinger},
+    year         = {2003},
+    publisher    = {Chapman \& Hall/CRC},
+    edition      = {31st}
+}
+
+@article{bib:JANAFtables,
+    title        = {{JANAF} Thermochemical Tables},
+    author       = {Chase, Jr, Malcolm W},
+    journaltitle = {Journal of Physical and Chemical Reference Data},
+    volume       = {14},
+    number       = {1},
+    year         = {1985},
+    url          = {https://srd.nist.gov/JPCRD/jpcrdS1V14.pdf}
 }
