--- a/preamble.tex
+++ b/preamble.tex
@@ -41,11 +41,12 @@
 \externaldocument{notes}
 
 \DeclareSIUnit{\angstrom}{\textup{\AA}}
+\DeclareSIUnit{\molar}{M}
 
 \addbibresource{../main.bib}
 \DefineBibliographyStrings{english}{bibliography={References}}
 
-\usetikzlibrary{backgrounds,decorations.markings,decorations.text,fpu}
+\usetikzlibrary{backgrounds,decorations.markings,decorations.text,fpu,intersections}
 \colorlet{blx}{blue!90!green!80}
 \colorlet{bly}{blue!90!green!60}
 \colorlet{blz}{blue!90!green!40}
